compiler/tests/success/x86-64/spillable.jazz
param int N = 13;

export fn main(reg u64 a) -> reg u64 {
  inline int i;
  reg u64[N] t;
  for i = 0 to N {
    t[i] = i;
  }
  #[spill] reg u64 s;
  s = 0;
  reg u64 r = 0;
  for i = 0 to N {
    r += t[i];
  }
  r += s;
  r += a;
  return r;
}
