compiler/tests/fail/array_expansion/x86-64/index_not_constant.jazz
export fn main () -> reg u64 {
  reg u64[4] r;
  reg u64 res;

  inline int i;
  for i = 0 to 4 {
    r[i] = 0;
  }

  reg u64 j;
  j = 0;
  res = r[j];

  return res;
}
